--- a/style.css
+++ b/style.css
@@ -1,93 +1,78 @@
+
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  display: flex;
-  justify - content: center;
-  align - items: center;
-  min - height: 100vh;
-  background - color: rgba(151, 35, 180, 0.493);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: rgba(151, 35, 180, 0.493);
 }
 
 .container {
-  background - color: white;
-  padding: 2rem;
-  border - radius: 1rem;
-  min - height: 45vh;
-  width: 40vh;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    min-height: 45vh;
+    width: 40vh;
 }
 
 form {
-  margin: 2rem 0 1rem 0;
+    margin: 2rem 0 1rem 0;
 }
 
 form select,
-  button,
-  input {
-  width: 100 %;
-  border: none;
-  outline: none;
-  border - radius: 0.75rem;
+button,
+input {
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 0.75rem;
 }
 
 form input {
-  border: 1px solid lightgray;
-  font - size: 1rem;
-  height: 3rem;
-  padding - left: 0.5rem;
+    border: 1px solid lightgray;
+    font-size: 1rem;
+    height: 3rem;
+    padding-left: 0.5rem;
 }
 
 .dropdown {
-  display: flex;
-  flex - wrap: wrap;
-  gap: 1rem;
-  justify - content: space - between;
-  align - items: center;
-  margin - top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 2rem;
 }
 
-.select - container img {
-  max - width: 1.5rem;
-  height: auto;
+.select-container img {
+    max-width: 2rem;
 }
-
-.select - container{
-  display: flex;
-  align - items: center;
-  gap: 0.5rem;
-  flex: 1;
-  min - width: 120px;
-  border - radius: 0.75rem;
-  border: 1px solid gray;
+.select-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6rem;
+    border-radius: 0.75rem;
+    border: 1px solid gray;
 }
-
 .dropdown i{
-  font - size: 1.5rem;
-  margin - top: 1.50rem;
+    font-size: 1.5rem;
+    margin-top: 1.50rem;
 }
-
-.select - container select{
-  font - size: 1rem;
-  flex: 1;
-  min - width: 0;
+.select-container select{
+    font-size: 1rem;
+    width: auto;
 }
-
 .msg{
-  margin: 2rem 0;
+    margin: 2rem 0;
 }
-
 form button{
-  height: 3rem;
-  font - size: 1.15rem;
-  background - color: rgba(151, 35, 180, 0.493);
-  color: #fff;
-  cursor: pointer;
-}
-
-@media(max - width: 500px) {
-  .container {
-    width: 90 %;
-  }
+    height: 3rem;
+    font-size: 1.15rem;
+    background-color: rgba(151, 35, 180, 0.493);
+    color: #fff;
+    cursor: pointer;
 }
